implementing CD in e2e cloud.

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -32,3 +32,36 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
           
+          registry.e2enetworks.net/poc-e2e-registry/poc-e2e-registry:28a9baf
+
+          registry.e2enetworks.net/poc-e2e-registry/poc-e2e-registry
+          docker push registry.e2enetworks.net/poc-e2e-registry/REPOSITORY[:TAG]
+
+  CD:
+      name: argocd-application
+      needs: CI
+      runs-on: ubuntu-latest
+      
+      steps:
+        - name: Checkout code 
+          uses: actions/checkout@v3
+          with:
+                ssh-private-key: ${{ secrets.SSH_KEY }}
+
+        - name: Get Hash
+          id: get_commit_hash
+          run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
+
+        - name: Git checkout branch
+          run: |
+              git status
+              git checkout e2e-infra-automation
+
+        - name: Update value.yaml file.
+          run: sed -i "s/tag:.*/tag:\ ${{ env.git_hash }}/g" helmcharts/values.yaml
+        
+        - name: git commit and push values.yaml
+          run: |
+              git add helmcharts/values.yaml
+              git commit -m "updated values in helm"
+              git push --set-upstream origin e2e-infra-automation
