--- a/helmcharts/values.yaml
+++ b/helmcharts/values.yaml
@@ -11,7 +11,7 @@ image:
   pullPolicy: IfNotPresent
   dbimage: postgres:12
   # Overrides the image tag whose default is the chart appVersion.
-  tag: v1.0.0
+  tag: e8bcdb8
 
 replicascount: 1
 imagePullSecrets: []
@@ -32,7 +32,7 @@ secret:
   type: Opaque
   user: postgres
   password: postgres
-  dburl: postgresql://postgres:IeThohchi9xohs-i@10.6.188.6:5432/postgres
+  dburl: postgresql://postgres:IeThohchi9xohs-i@10.7.162.11:5432/postgres
   auth: ewoJImF1dGhzIjogewoJCSJyZWdpc3RyeS5lMmVuZXR3b3Jrcy5uZXQiOiB7CgkJCSJhdXRoIjogIllXSmtkV3hyWVhKcGJVQnlaV3hoYldKa1lTNWpiMjA2WW1sdWJtaFVUMVpYUlRFd056QXciCgkJfQoJfQp9Cg==
 
 
