--- a/argocd-application.yaml
+++ b/argocd-application.yaml
@@ -18,6 +18,6 @@ spec:
   syncPolicy:
     automated:
       prune: false
-      selfHeal: true
+      selfHeal: false
     syncOptions:
     - CreateNamespace=true
