docker config issue fix.

--- a/helmcharts/templates/secret.yaml
+++ b/helmcharts/templates/secret.yaml
@@ -4,8 +4,8 @@ metadata:
   name: myregistrykey
   namespace: {{.Values.namespace.getns}}
 data:
-  .dockerconfigjson: {{.Values.secret.auth}}
-type: kubernetes.io/dockerconfigjson
+  .dockercfg: {{.Values.secret.auth}}
+type: kubernetes.io/dockercfg
 ---
 apiVersion: {{ .Values.apiVersion | default "v1" }}
 kind: Secret
