--- a/helmcharts/values.yaml
+++ b/helmcharts/values.yaml
@@ -11,7 +11,7 @@ image:
   pullPolicy: IfNotPresent
   dbimage: postgres:12
   # Overrides the image tag whose default is the chart appVersion.
-  tag: v1.0.0
+  tag: ae8285b
 
 replicascount: 1
 imagePullSecrets: []
